--- a/access/style.css
+++ b/access/style.css
@@ -47,6 +47,12 @@ html{
     margin-top: 4rem;
     padding: 3rem;
 }
+#content h1{
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    padding: 2rem;
+    color: var(--orange);
+}
 #content .pic{
     display: flex;
     flex-wrap: wrap;
@@ -67,14 +73,19 @@ html{
 }
 #content .pic .heart{
     background-color: var(--white);
-}
-#content .pic h4{
     border-top: 2px dashed var(--gray);
-    padding-top: 2rem;
+    display: flex;
+    height: 5rem;
+    align-items: center;
+}
+#content .pic a{
+    padding: 2rem;
+    text-decoration: none;
 }
 #content .pic i{
     padding: 1rem;
     font-size: 1.5rem;
+    cursor: pointer;
 }
 #content .pic i:hover{
     transform: scale(1.2);
