--- a/access/style.css
+++ b/access/style.css
@@ -78,6 +78,9 @@ html{
     height: 5rem;
     align-items: center;
 }
+#content .heart h6{
+    font-size: 1rem;
+}
 #content .pic a{
     padding: 2rem;
     text-decoration: none;
