--- a/access/style.css
+++ b/access/style.css
@@ -96,5 +96,8 @@ html{
     color: var(--red);
 }
 #footer{
-
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.2rem;
+    padding: 2rem;
 }
