--- a/access/style_login.css
+++ b/access/style_login.css
@@ -25,6 +25,9 @@ body{
     height: 50%;
     display: flex;
     border: 2px solid var(--gray);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5rem;
 }
 #login{
     display: grid;
@@ -32,6 +35,7 @@ body{
     justify-content: center;
     align-items: center;
     width: 50%;
+    text-align: center;
     
 }
 #box input{
@@ -39,10 +43,26 @@ body{
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     font-size: 1rem;
+    border-radius: 5px;
+    border: none;
+}
+#box button{
+    width: 4rem;
+    height: 2rem;
+    margin: auto;
+}
+#box button a{
+    text-decoration: none;
 }
 #register{
     width: 50%;
     display: grid;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+#register h6:hover,#login h6:hover{
+    cursor: pointer;
+    text-decoration: underline;
+    color: var(--blue);
 }
