--- a/access/style_login.css
+++ b/access/style_login.css
@@ -8,13 +8,13 @@
     --white: #D1D1D1;
     --orange:#f05123;
     --blue:#03e9f4;
-    --blue1:#93BFCF;
     --pink: #FBC5C5;
     --green:#00ff55;
     --red: #E96479;  
 }
 html{
   font-family: 'Courier New', Courier, monospace;
+  
 }
 body{
     width: 100vw;
@@ -28,15 +28,30 @@ body{
     margin-left: auto;
     margin-right: auto;
     margin-top: 5rem;
+    border-radius: 1rem;
+    position: relative;
+    overflow: hidden;
+    background-color: ;
+}
+#box .change{
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    background-image: url(./img/Beast_Player.png);
+    background-size: cover;
+    cursor: not-allowed;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 2s;
+}
+#box .change.active{
+    transform: translateX(100%);
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 2s;
 }
 #login{
     display: grid;
-    border-right: 2px dashed var(--orange);
     justify-content: center;
     align-items: center;
     width: 50%;
     text-align: center;
-    
 }
 #box input{
     padding: 1rem;
@@ -45,6 +60,12 @@ body{
     font-size: 1rem;
     border-radius: 5px;
     border: none;
+    background-color: var(--white);
+}
+#box label{
+    font-size: 1.5rem;
+    font-family: 'Courier New', Courier, monospace;
+
 }
 #box button{
     width: 4rem;
