--- a/access/style_login.css
+++ b/access/style_login.css
@@ -14,37 +14,46 @@
 }
 html{
   font-family: 'Courier New', Courier, monospace;
+  background-image: url(./img/pexels-david-besh-884788.jpg);
+  background-size: auto;
   
 }
 body{
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #box{
     width: 50%;
     height: 50%;
     display: flex;
     border: 2px solid var(--gray);
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5rem;
     border-radius: 1rem;
     position: relative;
     overflow: hidden;
-    background-color: ;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
 #box .change{
     position: absolute;
     width: 50%;
     height: 100%;
-    background-image: url(./img/Beast_Player.png);
-    background-size: cover;
     cursor: not-allowed;
+    background-image: url(./img/image.gif);
+    background-size: cover;
     transition: cubic-bezier(0.075, 0.82, 0.165, 1) 2s;
 }
 #box .change.active{
     transform: translateX(100%);
     transition: cubic-bezier(0.075, 0.82, 0.165, 1) 2s;
+}
+#box h1{
+    color: var(--orange);
 }
 #login{
     display: grid;
@@ -71,9 +80,17 @@ body{
     width: 4rem;
     height: 2rem;
     margin: auto;
+    border-radius: 2rem;
+    border: none;
+
 }
 #box button a{
-    text-decoration: none;
+    text-decoration: none;    
+    color: var(--orange);
+}
+#box button:hover{
+    background-color: var(--white);
+    border: 2px solid var(--gray);
 }
 #register{
     width: 50%;
